@@ -1,5 +1,17 @@
 2015-05-22  Dana Burkart  <dburkart@apple.com>
 
+        Add missing file from r184804 (mis-applied diff).
+        https://bugs.webkit.org/show_bug.cgi?id=144814
+
+        Reviewed by Alexey Proskuryakov.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BuildbotStaticAnalyzerQueueView.js: Added.
+        (BuildbotStaticAnalyzerQueueView):
+        (BuildbotStaticAnalyzerQueueView.prototype.update.appendStaticAnalyzerQueueStatus):
+        (BuildbotStaticAnalyzerQueueView.prototype.update):
+
+2015-05-22  Dana Burkart  <dburkart@apple.com>
+
         Add support to the botwatchers dashboard for a static analyzer bot.
         https://bugs.webkit.org/show_bug.cgi?id=144814
 
